# news-articles-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  steps.MD  ç
.github/workflows/: ci.yaml  ci.yml  dispatch-ci.yaml  on-push-ci.yaml
benchmarks/: naive_rag.MD
benchmarks/data/: questions.py  samples.csv
src/: main.py
src/api/database/: db.py
src/api/database/models/: articles.py  models.py
src/api/database/sql/: init.sql
src/api/etl/: ingest.py
src/api/etl/helpers/: convert_to_article.py  insert_in_db.py
src/assistant/components/: query_classifier.py  string_to_chat_message.py
src/assistant/components/evaluation_components/: mrr_evaluator.py
src/assistant/components/indexing_components/: csv_metadata_extractor.py
src/assistant/components/retrieval_components/: query_classifier.py
src/assistant/evaluators/: mrr_evaluator.py
src/assistant/pipelines/: index_pipeline.py  main_pipeline.py  rag_pipeline.py
src/assistant/prompts/: agent.py  naive_rag.py  query_classifier_prompt.py
src/assistant/routes/: query_classifier_routes.py
src/assistant/tools/: dummy_tool.py  websearch_tool.py
src/assistant/tools/db/: read_from_db.py
src/assistant/vectordb/: db.py
src/components/: query_classifier.py
src/etl/: ingest.py
src/etl/helpers/: convert_to_article.py  insert_in_db.py
src/pipelines/: index_pipeline.py  rag_pipeline.py
src/prompts/: naive_rag.py  query_classifier_prompt.py
tests/: test_db.py  test_etl.py  test_haystack_components.py
(+1 files in other folders)
